--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ nav {
 
 .quienesomos {
     display: grid;
-    grid-template-rows: 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px;
     margin: 0 auto;
     float: none;
 }
