--- a/css/estilocss.css
+++ b/css/estilocss.css
@@ -14,6 +14,8 @@ ul {
 li {
   transition: all .3s ease-in-out; }
 
+ 
+
 .home-title {
   background-color: #bd904c;
   color: white;
@@ -22,7 +24,9 @@ li {
   grid-template-rows: 100px;
   line-height: 5px;
   padding-top: 20px;
-  align-items: center; }
+  align-items: center; 
+  
+}
 
 .home-imagen {
   justify-content: center;
@@ -73,9 +77,9 @@ nav {
   grid-template-columns: repeat(3, 2fr);
   position: relative; }
 
-  @media screen and (min-width:1024px) {
+  @media screen and (min-width : 768px) and (max-width : 1024px) {
     .home-title {
     display: grid;
-    grid-template-columns: 400px 400px 700px;
+    grid-template-columns: 200px 300px 500px;
   }
-    }
+}
