--- a/css/estilocss.css
+++ b/css/estilocss.css
@@ -1,3 +1,5 @@
+
+
 .home-intro {
   background-color: #e9d5bb;
   color: white;
@@ -14,18 +16,15 @@ ul {
 li {
   transition: all .3s ease-in-out; }
 
- 
-
 .home-title {
   background-color: #bd904c;
   color: white;
   display: grid;
-  grid-template-columns: 400px 400px 500px;
+  grid-template-columns: 400px 400px 700px;
   grid-template-rows: 100px;
   line-height: 5px;
   padding-top: 20px;
   align-items: center; 
-  
 }
 
 .home-imagen {
@@ -75,11 +74,21 @@ nav {
 .influencers {
   display: grid;
   grid-template-columns: repeat(3, 2fr);
-  position: relative; }
+  position: absolute;
+ }
 
-  @media screen and (min-width : 768px) and (max-width : 1024px) {
-    .home-title {
+@media screen and (max-width:768px) {
+  .home-title {
     display: grid;
-    grid-template-columns: 200px 300px 500px;
+  grid-template-columns: 200px 300px 500px;
   }
-}
+  .home-imagen {
+    margin-right: 250px; }
+}  
+
+@media screen and (max-width:1024px) {
+  .home-title {
+    display: grid;
+  grid-template-columns: 300px 300px 600px;
+  }
+}  
