--- a/css/estilocss.css
+++ b/css/estilocss.css
@@ -1,5 +1,4 @@
 
-
 .home-intro {
   background-color: #e9d5bb;
   color: white;
@@ -74,21 +73,26 @@ nav {
 .influencers {
   display: grid;
   grid-template-columns: repeat(3, 2fr);
-  position: absolute;
  }
+
+ @media screen and (max-width:1024px) {
+  .home-title {
+  display: grid;
+  grid-template-columns: 300px 300px 500px;
+  }
+}  
 
 @media screen and (max-width:768px) {
   .home-title {
     display: grid;
-  grid-template-columns: 200px 300px 500px;
+    grid-template-columns: 200px 300px 500px;
+    }
+    .home-imagen {
+      margin-right: 250px; }
+      h4 {
+        font-size: smaller;
+      }
+      h1, h2 {
+        font-size: 1.5em;
+      }
   }
-  .home-imagen {
-    margin-right: 250px; }
-}  
-
-@media screen and (max-width:1024px) {
-  .home-title {
-    display: grid;
-  grid-template-columns: 300px 300px 600px;
-  }
-}  
